@startuml diagrama

class Joia {
    - id: long
    - nome: string
    - material: double
    - descricao: string
    - pedrasPreciosas: PedrasPreciosas
    - preco: double
    - estoque: int
    - cor: Cor
    - peso: double
}

class Pulseira {
    - id: long
    - comprimento: double
    - tipoFecho: TipoFecho
    - tipoElo: TipoElo
    - imgPulseira: string
    - pingente: Pingente
}

class Corrente {
    - id: long
    - comprimento: double
    - tipoFecho: TipoFecho
    - tipoElo: TipoElo
    - imgCorrente: string
    - pingente: Pingente
}

class Anel {
    - id: long
    - tamanho: double
    - imgAnel: string
    - pedraPreciosa: PedraPreciosa
}

class Pingente {
    - id: long
    - pedraPreciosa: PedraPreciosa
    - material: Material
    - cor: Cor
}

class Colecao {
    - nome: String
    - descricao: String
    - joia: List<Joia>
    - pessoa: pessoa
}


enum Material{
    - OURO,
    - PRATA,
    - BRONZE,
    - AÇO
}

class PedraPreciosa{
    - pedra: Pedra
    - peso: string
    - quantidade: Integer
    - cor: Cor
}

enum Pedra{
    DIAMANTE,
    RUBI,
    ESMERALDA,
    PEROLA

}


class ItemPedido{
    - id: long
    - quantidade: Integer
    - joia: Joia
}

class Pedido {
    - pessoa: Pessoa
    - itens: ItemPedido[]
}

enum Cor{
    BRANCO,
    VERMELHO,
    VERDE,
    AZUL,
    AMARELO,
    PRATA

}

class Pagamento {
    - id: long
    - valorTotal: double
    - metodo: MetodoDePagamento
    - status: StatusPagamento
    - dataPagamento: localDate
    - pedido: Pedido
}

enum MetodoDePagamento {
    CARTAO_DE_CREDITO,
    CARTAO_DE_DEBITO,
    PIX
}

enum StatusPagamento {
    PENDENTE,
    APROVADO,
    REJEITADO,
    CANCELADO
}

class Cartao {
    - idPedido: long
    - nome: String
    - numero: String
    - dataValidade: localDate
    - cvc: Integer
    - idBandeira: long
}

enum BandeiraCartao{
    VISA,
    MASTERCARD,
    ELO
}

class Perfil {
    ADM,
    USER
}

class Pessoa {
    - id: long
    - nome: string
    - senha: string
    - cpf: string
    - telefone: string
    - e-mail: string
    - dataNascimento: Data
    - perfil: Perfil
    - endereco: List<Endereco>
    - nomeImagem: string
}

class Endereco {
    - id: long
    - cep: int
    - numero: int
    - bairro: string
    - complemento: string
    - logradouro: string
    - cidade: Cidade
}

class Cidade {
    - id: long
    - nome: string,
    - estado: Estado
}

class Estado {
    - id: long
    - nome: string
    - sigla: string
}


Joia <|-- Pulseira

Joia <|-- Anel

Joia <|-- Corrente

Joia "1" --> "0..*" Colecao

Colecao "1" --> "0..*" Pessoa

Pingente "1" --> "0..*" Cor

Pingente "1" --> "0..*" Material

Pingente "*" --> "*" PedraPreciosa

Pulseira "1" --> "0..*" Pingente

Corrente "1" --> "0..*" Pingente

Joia "1" --> "1..*" ItemPedido

Joia "1" --> "1" Cor

Joia "1" --> "0..*" Material

Joia "0..*" --> "1" PedraPreciosa

Pedra "1" --> "1" PedraPreciosa

PedraPreciosa "1" --> "0..*" Cor

Pedido "1" --> "0..*" ItemPedido

Pessoa "1" --> "1" Perfil

Pessoa "1" --> "1" Pedido

Pessoa "1" --> "1..*" Endereco

Endereco "1" --> "1" Cidade

Cidade "1" --> "0..*" Estado

Pagamento "1" --> "1..*" Pedido

Pagamento "1" --> "1" Pessoa

Pagamento "1" --> "1" MetodoDePagamento

MetodoDePagamento "1" --> "0.." Cartao

Cartao "1" --> "0.." BandeiraCartao

Pagamento "1" --> "1" StatusPagamento

@enduml